--- a/Test/flowchart.html
+++ b/Test/flowchart.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Flowchart</title>
+    <title>Graph</title>
     <style>
         /* ƒXƒ^ƒCƒ‹‚ð’Ç‰Á‚·‚é‚±‚Æ‚ª‚Å‚«‚Ü‚· */
     </style>
